--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <app-interactive-map></app-interactive-map>
+<app-state-temperature-chart>
+    [temperaturasPorEstado]="temperaturasPorEstado"
+</app-state-temperature-chart>
