--- a/src/app/state-temperature-chart/state-temperature-chart.component.html
+++ b/src/app/state-temperature-chart/state-temperature-chart.component.html
@@ -1,1 +1,14 @@
-<p>state-temperature-chart works!</p>
+<div style="height: 300px;">
+    <ngx-charts-bar-vertical-stacked
+      [results]="barData"
+      [xAxis]="true"
+      [yAxis]="true"
+      [legend]="true"
+      [showXAxisLabel]="true"
+      [showYAxisLabel]="true"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel"
+      [customColors]="colorScheme">
+    </ngx-charts-bar-vertical-stacked>
+  </div>
+  
