grafica para predecir la probabilidad de precipitacion

--- a/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
+++ b/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
@@ -1,1 +1,13 @@
-<p>daily-precipitation-probability works!</p>
+<div style="height: 300px;">
+    <ngx-charts-bar-vertical-stacked
+      [results]="barData"
+      [xAxis]="true"
+      [yAxis]="true"
+      [legend]="true"
+      [showXAxisLabel]="true"
+      [showYAxisLabel]="true"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel">
+    </ngx-charts-bar-vertical-stacked>
+  </div>
+  
