--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
 </app-state-temperature-chart>
+<app-hourly-temperature>
+    [temperaturasPorHora]="temperaturasPorHora"
+</app-hourly-temperature>
