Linea de tiempo temperatura en la semana
Se hace un seguimiento de la variacion de la temperatura a lo largo de los dias de la semana

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-nav-bar></app-nav-bar>
 <app-interactive-map></app-interactive-map>
+<app-daily-temperature-trend></app-daily-temperature-trend>
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
 </app-state-temperature-chart>
+
 
