--- a/src/app/daily-temperature-trend/daily-temperature-trend.component.html
+++ b/src/app/daily-temperature-trend/daily-temperature-trend.component.html
@@ -1,1 +1,14 @@
-<p>daily-temperature-trend works!</p>
+<div>
+    <ngx-charts-line-chart
+    [results]="tendenciaTemperaturaDiaria"
+    [legend]="true"
+    [showXAxisLabel]="true"
+    [showYAxisLabel]="true"
+    [xAxis]="true"
+    [yAxis]="true"
+    [timeline]="true"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    >
+    </ngx-charts-line-chart>
+</div>
