Distribución de la Probabilidad de Climas por Día
Se realizo una grafica pie chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
 </app-state-temperature-chart>
-<app-hourly-temperature>
+<!-- <app-hourly-temperature>
     [temperaturasPorHora]="temperaturasPorHora"
-</app-hourly-temperature>
+</app-hourly-temperature> -->
+
+<app-weather-probability></app-weather-probability>
 
