grafica para velocidad del viento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <app-nav-bar></app-nav-bar>
-<app-interactive-map></app-interactive-map>
+<!-- <app-interactive-map></app-interactive-map>
+<app-daily-temperature-trend></app-daily-temperature-trend>
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
-</app-state-temperature-chart>
-<app-hourly-temperature>
+</app-state-temperature-chart> -->
+<!-- <app-hourly-temperature>
     [temperaturasPorHora]="temperaturasPorHora"
-</app-hourly-temperature>
+</app-hourly-temperature> -->
+<app-wind-speed-direction [data]="windSpeed"/>
+
