--- a/src/app/wind-speed-direction/wind-speed-direction.component.html
+++ b/src/app/wind-speed-direction/wind-speed-direction.component.html
@@ -1,1 +1,7 @@
-<p>wind-speed-direction works!</p>
+<ngx-charts-gauge
+  [view]="view"
+  [results]="data"
+  [legend]="legend"
+  [legendPosition]="legendPosition"
+  >
+</ngx-charts-gauge>
