Tarjetas indicadoras del clima
Tarjetas de como se veria el resumen del clima

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-nav-bar></app-nav-bar>
+<app-summary></app-summary>
 <app-interactive-map></app-interactive-map>
 <app-daily-temperature-trend></app-daily-temperature-trend>
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
 </app-state-temperature-chart>
-<!-- <app-hourly-temperature>
+<app-hourly-temperature>
     [temperaturasPorHora]="temperaturasPorHora"
-</app-hourly-temperature> -->
-
+</app-hourly-temperature>
 <app-weather-probability></app-weather-probability>
 
