Ahora se ven imagenes en el mapa dependiendo del clima

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar [buscarCiudadMapa]="buscarCiudadMapa.bind(this)"></app-nav-bar>
 
- <app-interactive-map [prueba]="prueba" [options]="newOptions"></app-interactive-map>
+ <app-interactive-map [prueba]="prueba" [options]="newOptions" [icono]="icon"></app-interactive-map>
 <!--<app-daily-temperature-trend></app-daily-temperature-trend>
 <app-state-temperature-chart>
     [temperaturasPorEstado]="temperaturasPorEstado"
