--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,17 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-}
-
 .navbar {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     background-color: #333;
-    padding: 10px;
+    height: 11%;
+
 }
 
 .filter {
@@ -32,13 +26,18 @@ body {
 
 .filter button {
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
+    background: linear-gradient(135deg, #fda085 0%, #f6d365 100%);
+    color: 00000;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .filter button:hover {
-    background-color: #45a049;
+    background: 
+    linear-gradient(135deg, #f6d365 0%, #fda085 50%, #f6d365 100%),
+    linear-gradient(135deg, #fda085 0%, #f6d365 50%, #fda085 100%);
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
