--- a/src/app/weather-probability/weather-probability.component.html
+++ b/src/app/weather-probability/weather-probability.component.html
@@ -1,6 +1,6 @@
 <div style="height: 300px;">
     <h4 style="text-align: center;">{{Dia}}</h4>
     <ngx-charts-pie-grid
-    [results]="single">
+    [results]="weatherProbability">
     </ngx-charts-pie-grid>
 </div>
