Componente nuevo, diseño

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,11 @@
 
     <div class="dashboard-summary">
         <app-summary></app-summary>
+        <div class="xd">
+            <app-temperatureintheday></app-temperatureintheday>
+        </div>
     </div>
+
     
 </div>
 
