--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,21 +9,21 @@
 .dashboard-summary {
     position: absolute;
     top: 12%;
-    width: 66.8%;
+    width: 66.5%;
     margin-left: 0.7%;
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     border-radius: 5px; 
     padding: 10px;
     background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
-
+    
 }
 .dashboard-map {
     position: absolute;
     top: 12%;
     right: 0;
-    width: 29.4%;
-    height: 88%;
+    width: 30%;
+    height: 105%;
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     border-radius: 5px; 
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: left; 
     align-items: flex-start;
-    margin-top: 20%;
+    margin-top: 30%;
     margin-left: 0.2%;
     margin-right: 1.5%;
     
@@ -96,14 +96,15 @@
 
 }
 .dashboard-grafica5 {
-    width: 36.5%;
+    width: 36%;
     height: 420px;
     margin-left: 0.6%;
     margin-top: 0.5%;
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     border-radius: 5px; 
-    background: linear-gradient(135deg, #f6d365 0%, #fda085 100%); 
+    background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
+    padding-left: 10px; 
 }
 
 .dashboard-grafica6 {
