--- a/src/app/state-temperature-chart/state-temperature-chart.component.html
+++ b/src/app/state-temperature-chart/state-temperature-chart.component.html
@@ -7,8 +7,7 @@
       [showXAxisLabel]="true"
       [showYAxisLabel]="true"
       [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel"
-      [customColors]="colorScheme">
+      [yAxisLabel]="yAxisLabel">
     </ngx-charts-bar-vertical-stacked>
   </div>
   
