--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,64 +1,56 @@
 <div class="contenedor">
-    <div class="weather-card" *ngFor="let weather of weatherData">
-        <div class="temperature">
-          {{ weather.temperature }}°F
-          <span class="degree-type"> / °C</span>
-        </div>
+  <div class="weather-card" >
+    <div class="temperature">
+      {{ weatherData.temperature }}°C
+      <span class="degree-type"> </span>
+    </div>
 
-        <div class="high-low">
-          <p>High {{ weather.high }}°F</p> 
-          <p>Low {{ weather.low }}°F</p>
-        </div>
+    <div class="high-low">
+      <p>High {{ weatherData.high }}°C</p> 
+      <p>Low {{ weatherData.low }}°C</p>
+    </div>
 
-        <div class="details">
-          <div>{{ weather.description }}</div>
-          <div>Feels like {{ weather.feelsLike }}°F</div>
-          <div>{{ weather.condition }}</div>
-        </div>
+    <div class="details">
+      <div>{{ weatherData.description }}</div>
+      <div>Feels like {{ weatherData.feelsLike }}°C</div>
+      <div>{{ weatherData.condition }}</div>
+    </div>
+  </div>
 
-        <img class="weather-icon" [src]="weather.icon" alt="Weather icon">
+  <div class="weather-card-2">
+    <div class="weather-row">
+      <span class="label">Visibility:</span>
+      <span class="value">{{ weatherData.visibility }} km</span>
+    </div>
 
-     </div>
+    <div class="weather-row">
+      <span class="label">Wind:</span>
+      <span class="value">{{ weatherData.wind }} mph</span>
+    </div>
 
-      <div class="weather-card-2">
+    <div class="weather-row">
+      <span class="label">Humidity:</span>
+      <span class="value">{{ weatherData.humidity }}%</span>
+    </div>
 
-        <div class="weather-row">
-          <span class="label">Visibility:</span>
-          <span class="value">{{ weatherData.visibility }} km</span>
-        </div>
-  <!-- 
-          <div class="weather-row">
-            <span class="label">Dew Point:</span>
-            <span class="value">{{ weatherData.dewPoint }}°F</span>
-          </div> -->
-
-        <div class="weather-row">
-          <span class="label">Wind:</span>
-          <span class="value">{{ weatherData.wind }} mph</span>
-        </div>
-
-        <div class="weather-row">
-          <span class="label">Humidity:</span>
-          <span class="value">{{ weatherData.humidity }}%</span>
-        </div>
-
-        <div class="weather-row">
-          <span class="label">Cloudiness:</span>
-          <span class="value">{{ weatherData.cloudiness }}%</span>
-        </div>
-      </div>
+    <div class="weather-row">
+      <span class="label">Cloudiness:</span>
+      <span class="value">{{ weatherData.cloudiness }}%</span>
+    </div>
+  </div>
       
 
-      <div class="weather-card-3">
-        <div class="sunrise-section">
-          <span class="icon-2">🌅</span>
-          <div class="label-2">Sunrise</div>
-          <div class="time">{{ weatherData.sunrise }}</div>
-        </div>
-        <div class="sunset-section">
-          <span class="icon-2">🌇</span>
-          <div class="label-2">Sunset</div>
-          <div class="time">{{ weatherData.sunset }}</div>
-        </div>
-      </div>
+  <div class="weather-card-3">
+    <div class="sunrise-section">
+      <span class="icon-2">🌅</span>
+      <div class="label-2">Sunrise</div>
+      <div class="time">{{ weatherData.sunrise.split(" ")[1].slice(0,4) }}</div>
+    </div>
+    <div class="sunset-section">
+      <span class="icon-2">🌇</span>
+      <div class="label-2">Sunset</div>
+      <div class="time">{{ weatherData.sunset.split(" ")[1].slice(0,4) }}</div>
+    </div>
+  </div>
+
 </div>
