--- a/src/app/temperatureintheday/temperatureintheday.component.html
+++ b/src/app/temperatureintheday/temperatureintheday.component.html
@@ -1,7 +1,7 @@
 <div class="Contenedor">
     @for (hour of dailyTemperature; track $index) {
         <div class="weather-card">
-            <p>{{ hour.name | date:'shortTime'  }}⌚</p>
+            <p>{{ hour.name.split(" ")[1].slice(0,5) }}⌚</p> 
             <div class="temperature">{{ hour.value }} °C</div>
             <p>{{ hour.humidity }}%💧</p>
         </div>
