--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="dashboard-grafica2">
-        <a>Comparacion de Temperatura Estatal</a>
+        <a>Comparacion de Temperatura Ciudades</a>
         <app-state-temperature-chart [temperaturasPorEstado]="temperaturasPorEstado2" ></app-state-temperature-chart>
     </div>
 
