--- a/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
+++ b/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
@@ -7,7 +7,9 @@
       [showXAxisLabel]="true"
       [showYAxisLabel]="true"
       [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel">
+      [yAxisLabel]="yAxisLabel"
+      [view]="[520, 300]"
+      >
     </ngx-charts-bar-vertical-stacked>
   </div>
   
