--- a/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
+++ b/src/app/daily-precipitation-probability/daily-precipitation-probability.component.html
@@ -1,5 +1,5 @@
 <div style="height: 300px;">
-    <ngx-charts-bar-vertical-stacked
+  <ngx-charts-bar-vertical
       [results]="barData"
       [xAxis]="true"
       [yAxis]="true"
@@ -10,6 +10,6 @@
       [yAxisLabel]="yAxisLabel"
       [view]="[520, 300]"
       >
-    </ngx-charts-bar-vertical-stacked>
+</ngx-charts-bar-vertical>
   </div>
   
