--- a/src/app/state-temperature-chart/state-temperature-chart.component.html
+++ b/src/app/state-temperature-chart/state-temperature-chart.component.html
@@ -1,4 +1,5 @@
 
+<div style="height: 300px;">
     <ngx-charts-bar-vertical-stacked
       [results]="barData"
       [xAxis]="true"
@@ -10,5 +11,5 @@
       [yAxisLabel]="yAxisLabel">
 
     </ngx-charts-bar-vertical-stacked>
-
+</div>
   
